Login/Register backend

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection" : "Data source=webshop.db"
   },
+  "TokenKey":"Danijel Martinec je napravio ovaj projekt",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
