--- a/client/angular.json
+++ b/client/angular.json
@@ -23,7 +23,9 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [         
+            "styles": [              
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/font-awesome/css/font-awesome.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -61,9 +63,6 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "sslKey" : "./ssl/server.key",
-            "sslCert": "./ssl/server.crt",
-            "ssl": true,
             "browserTarget": "client:build"
           },
           "configurations": {
