--- a/client/package.json
+++ b/client/package.json
@@ -11,16 +11,22 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/core": "^11.1.2",
+    "@angular-devkit/schematics": "^11.1.2",
     "@angular/animations": "~11.1.1",
     "@angular/common": "~11.1.1",
     "@angular/compiler": "~11.1.1",
     "@angular/core": "~11.1.1",
     "@angular/forms": "~11.1.1",
+    "@angular/localize": "~11.1.1",
     "@angular/platform-browser": "~11.1.1",
     "@angular/platform-browser-dynamic": "~11.1.1",
     "@angular/router": "~11.1.1",
+    "@fortawesome/fontawesome-free": "^5.15.2",
+    "@ionic/angular-toolkit": "^3.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "@schematics/angular": "^11.1.2",
-    "font-awesome": "^4.7.0",
+    "bootstrap": "^4.5.0",
     "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -28,11 +34,12 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1101.2",
-    "@angular/cli": "~11.1.2",
+    "@angular/cli": "^11.1.2",
     "@angular/compiler-cli": "~11.1.1",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "font-awesome": "^4.7.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.2.0",
