--- a/client/angular.json
+++ b/client/angular.json
@@ -23,8 +23,8 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [              
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+            "styles": [       
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/font-awesome/css/font-awesome.css",
               "src/styles.css"
             ],
@@ -63,6 +63,9 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
+            "sslKey" : "./ssl/server.key",
+            "sslCert": "./ssl/server.crt",
+            "ssl": true,
             "browserTarget": "client:build"
           },
           "configurations": {
