--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~11.1.1",
     "@fortawesome/fontawesome-free": "^5.15.2",
     "@ionic/angular-toolkit": "^3.0.0",
+    "@kolkov/ngx-gallery": "^1.2.3",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "@schematics/angular": "^11.1.2",
     "bootstrap": "^4.5.0",
