--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "@schematics/angular": "^11.1.2",
     "bootstrap": "^4.5.0",
+    "ng2-file-upload": "^1.4.0",
     "ngx-toastr": "^13.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
