--- a/client/package.json
+++ b/client/package.json
@@ -28,8 +28,10 @@
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "@schematics/angular": "^11.1.2",
     "bootstrap": "^4.5.0",
+    "class-transformer": "^0.4.0",
     "ng2-file-upload": "^1.4.0",
     "ngx-toastr": "^13.2.0",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
